# boids_wasm

./: .clang-format  .gitignore  CMakeLists.txt  CNAME  a.out.js  a.out.wasm  index.data  index.html  index.js  index.wasm  index.wasm.map  index.worker.js  main.cpp  style.css
js/: data.js  events.js  script.js  settings.js
lib/: swarm.cpp
src/: boid.cpp  globals.cpp  jsonboid.cpp  level.cpp  main.cpp  render.cpp  rgb.cpp
src/headers/: boid.hpp  globals.hpp  jsonboid.hpp  level.hpp  render.hpp  rgb.hpp  settings.hpp  v2d.h
src/shaders/: tri.frag  tri.vert
